src/objects/peer__Booking_Order__c.object
<CustomObject>
    <fields>
        <fullName>peer__Amount_In_Funding__c</fullName>
        <label>Amount In Funding</label>
        <summarizedField>peer__Investment_Booking__c.peer__Investment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>peer__Investment_Booking__c.peer__Stage__c</field>
            <operation>equals</operation>
            <value>In Funding</value>
        </summaryFilterItems>
        <summaryForeignKey>peer__Investment_Booking__c.peer__Booking_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>peer__Amount__c</fullName>
        <label>Amount</label>
        <summarizedField>peer__Investment_Booking__c.peer__Investment_Amount__c</summarizedField>
        <summaryForeignKey>peer__Investment_Booking__c.peer__Booking_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>peer__Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Funded_Amount__c</fullName>
        <label>Funded Amount</label>
        <summarizedField>peer__Investment_Booking__c.peer__Investment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>peer__Investment_Booking__c.peer__Stage__c</field>
            <operation>equals</operation>
            <value>Funded</value>
        </summaryFilterItems>
        <summaryForeignKey>peer__Investment_Booking__c.peer__Booking_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>peer__Investor__c</fullName>
        <label>Investor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Booking Orders</relationshipLabel>
        <relationshipName>Booking_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>peer__Number_of_Bookings__c</fullName>
        <label>Number of Bookings</label>
        <summaryForeignKey>peer__Investment_Booking__c.peer__Booking_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Actual_Amount__c</fullName>
        <label>Portfolio Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Token__c</fullName>
        <description>Token associated with each booking id</description>
        <label>Portfolio Token</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>peer__Requested_Amount__c</fullName>
        <label>Requested Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Safe_Funds__c</fullName>
        <label>Safe Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Uncommited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>peer__Verification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verification</label>
        <referenceTo>peer__Verification__c</referenceTo>
        <relationshipLabel>Booking Orders</relationshipLabel>
        <relationshipName>Booking_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Weighted_Duration__c</fullName>
        <label>Weighted Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Weighted_Interest__c</fullName>
        <description>The Weighted Average bid interest rate of the Portfolio.</description>
        <inlineHelpText>The Weighted Average bid interest rate of the Portfolio.</inlineHelpText>
        <label>Weighted Interest</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Weighted_Safe_Fund__c</fullName>
        <label>Weighted Safe Fund</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Booking Order</label>
    <listViews>
        <fullName>peer__All</fullName>
        <columns>NAME</columns>
        <columns>peer__Status__c</columns>
        <columns>peer__Date__c</columns>
        <columns>peer__Investor__c</columns>
        <columns>peer__Requested_Amount__c</columns>
        <columns>peer__Amount__c</columns>
        <columns>peer__Number_of_Bookings__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BO-{00000000}</displayFormat>
        <label>Booking Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>